test/invalid/idl/async-sequence-const.webidl
[Exposed=Window]
interface AsyncSequence {
  const async_sequence<long, short>  ASYNC_SEQUENCE = 0;
};
